# ICPCPrep

./: .gitignore  CMakeLists.txt  Makefile  README.md  testcode.sh
CP-Algorithms/: implementations.cpp
CP-Algorithms/DataStructures/: FenwickTree.h  MinQueue.h  MinStack.h
CP-Algorithms/Implementations/: FenwickTree.h  SparseTable.h  implementations.cpp
CP-Algorithms/LinearAlgebra/: GaussJordan.h  Kraut.h
CP-Algorithms/NumericalMethods/: BinarySearch.h  TernarySearch.h
Codeforces/: Interesting_Drink.cpp  R2D2_and_Droid_Army.cpp  Weakness_And_Poorness.cpp
Kattis/: Branch_Manager.cpp
